force-app/main/default/objects/Siniestro__c/Siniestro__c.object-meta.xml
<CustomObject>
    <label>Siniestro</label>
    <nameField>
        <label>Sinisetro Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Siniestros</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>