force-app/main/default/objects/Siniestro__c/fields/Numero_Siniestro__c.field-meta.xml
<CustomField>
    <fullName>Numero_Siniestro__c</fullName>
    <label>Numero Siniestro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>