force-app/main/default/objects/Siniestro__c/fields/Poliza__c.field-meta.xml
<CustomField>
    <fullName>Poliza__c</fullName>
    <label>Poliza</label>
    <referenceTo>Poliza__c</referenceTo>
    <relationshipName>Siniestros</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>